contracts/credit/tests/snapshots/snap_prorate__prorate_interest_boundary_cases.snap
---
source: contracts/credit/tests/snap_prorate.rs
expression: test_cases
---
[
    ProrateTestCase {
        principal: 0,
        rate_bps: 300,
        time_delta: 86400,
        rounding: Floor,
        result: 0,
    },
    ProrateTestCase {
        principal: 10000,
        rate_bps: 0,
        time_delta: 86400,
        rounding: Floor,
        result: 0,
    },
    ProrateTestCase {
        principal: 10000,
        rate_bps: 300,
        time_delta: 0,
        rounding: Floor,
        result: 0,
    },
    ProrateTestCase {
        principal: 1,
        rate_bps: 1,
        time_delta: 1,
        rounding: Floor,
        result: 0,
    },
    ProrateTestCase {
        principal: 1,
        rate_bps: 1,
        time_delta: 1,
        rounding: Ceil,
        result: 1,
    },
    ProrateTestCase {
        principal: 10000,
        rate_bps: 300,
        time_delta: 31557600,
        rounding: Floor,
        result: 300,
    },
    ProrateTestCase {
        principal: 10000,
        rate_bps: 300,
        time_delta: 31557600,
        rounding: Ceil,
        result: 300,
    },
    ProrateTestCase {
        principal: 10000,
        rate_bps: 300,
        time_delta: 15778800,
        rounding: Floor,
        result: 150,
    },
    ProrateTestCase {
        principal: 10000,
        rate_bps: 300,
        time_delta: 86400,
        rounding: Floor,
        result: 0,
    },
    ProrateTestCase {
        principal: 10000,
        rate_bps: 300,
        time_delta: 86400,
        rounding: Ceil,
        result: 1,
    },
    ProrateTestCase {
        principal: 10000,
        rate_bps: 10000,
        time_delta: 31557600,
        rounding: Floor,
        result: 10000,
    },
    ProrateTestCase {
        principal: 1000000000,
        rate_bps: 500,
        time_delta: 31557600,
        rounding: Floor,
        result: 50000000,
    },
    ProrateTestCase {
        principal: 315576000000,
        rate_bps: 10000,
        time_delta: 31557600,
        rounding: Floor,
        result: 315576000000,
    },
    ProrateTestCase {
        principal: 315576000000,
        rate_bps: 10000,
        time_delta: 31557600,
        rounding: Ceil,
        result: 315576000000,
    },
    ProrateTestCase {
        principal: 1000000,
        rate_bps: 100,
        time_delta: 4294967295,
        rounding: Floor,
        result: 1361,
    },
    ProrateTestCase {
        principal: 100,
        rate_bps: 10000,
        time_delta: 31557600,
        rounding: Floor,
        result: 100,
    },
    ProrateTestCase {
        principal: 1000000,
        rate_bps: 500,
        time_delta: 3600,
        rounding: Floor,
        result: 5,
    },
    ProrateTestCase {
        principal: 315576000000,
        rate_bps: 1,
        time_delta: 31557600,
        rounding: Floor,
        result: 31557600,
    },
    ProrateTestCase {
        principal: 315576000000,
        rate_bps: 1,
        time_delta: 31557600,
        rounding: Ceil,
        result: 31557600,
    },
    ProrateTestCase {
        principal: 1000000000000000000,
        rate_bps: 100,
        time_delta: 31557600,
        rounding: Floor,
        result: 100000000000000000,
    },
    ProrateTestCase {
        principal: 100000,
        rate_bps: 500,
        time_delta: 2592000,
        rounding: Floor,
        result: 410,
    },
]
