contracts/credit/tests/snapshots/snap_prorate__prorate_interest_monotonic_principal.snap
---
source: contracts/credit/tests/snap_prorate.rs
expression: principal_cases
---
[
    (
        1,
        0,
    ),
    (
        10,
        0,
    ),
    (
        100,
        0,
    ),
    (
        1000,
        0,
    ),
    (
        10000,
        300,
    ),
    (
        100000,
        3000,
    ),
]
