contracts/credit/tests/snapshots/snap_prorate__prorate_interest_monotonic_rate.snap
---
source: contracts/credit/tests/snap_prorate.rs
expression: rate_cases
---
[
    (
        1,
        1,
    ),
    (
        100,
        100,
    ),
    (
        300,
        300,
    ),
    (
        500,
        500,
    ),
    (
        1000,
        1000,
    ),
    (
        10000,
        10000,
    ),
]
