contracts/credit/tests/snapshots/snap_prorate__prorate_interest_rounding_differences.snap
---
source: contracts/credit/tests/snap_prorate.rs
expression: diff_cases
---
[
    (
        10000,
        300,
        86400,
        0,
        1,
    ),
    (
        1,
        1,
        31557600,
        0,
        1,
    ),
    (
        100,
        50,
        3600,
        0,
        1,
    ),
    (
        1000000,
        500,
        86400,
        136,
        137,
    ),
    (
        315576000000,
        9999,
        31557600,
        315438424000,
        315438424000,
    ),
]
